Adjusted bug in description section where text was flowing out of the container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,10 @@
   scrollbar-width: none;
 }
 
+p {
+  word-wrap: break-word;
+}
+
 /* CSS LOADER */
 
 .loader {
